--- a/README.adoc
+++ b/README.adoc
@@ -229,6 +229,9 @@ converted to POJO:: After raw Configuration Data has been loaded
 | featureTypes | `java.util.Set<link:{source-link-base}/google-cloud/src/main/java/org/tweetwallfx/google/vision/CloudVisionSettings.java#L52-L65[org.tweetwallfx.google.vision.CloudVisionSettings$FeatureType]>` | NO | `["SAFE_SEARCH_DETECTION", "TEXT_DETECTION"]` | Sets the features that are to requested in a request for image analysis by Google Cloud Vision API.
 |===
 
+=== TODO: stepEngine
+TODO: Add content
+
 === tweetwall
 
 Settings for the Tweetwall Application in general.
