--- a/README.adoc
+++ b/README.adoc
@@ -155,6 +155,13 @@ Example values may be:
 The combined Configuration - in effect a JSON Object - may contain several configuration sections in the form of the JSONs attributes.
 
 === TODO: cacheConfiguration
+
+TODO: Add content
+
+sectionName:: `cacheConfiguration`
+class:: `org.tweetwallfx.cache.CacheSettings` (link:{source-link-base}/cache/src/main/java/org/tweetwallfx/cache/CacheSettings.java[source])
+converted to POJO:: After raw Configuration Data has been loaded
+
 TODO: Add content
 
 === connectionSettings
@@ -193,9 +200,23 @@ converted to POJO:: After raw Configuration Data has been loaded
 |===
 
 === TODO: devoxxCFP
+
+TODO: Add content
+
+sectionName:: `devoxxCFP`
+class:: `org.tweetwallfx.cache.CacheSettings` (link:{source-link-base}/cache/src/main/java/org/tweetwallfx/cache/CacheSettings.java[source])
+converted to POJO:: After raw Configuration Data has been loaded
+
 TODO: Add content
 
 === TODO: filterchains
+
+Settings concerning FilterChains.
+
+sectionName:: `filterchains`
+class:: `org.tweetwallfx.filterchain.FilterChainSettings` (link:{source-link-base}/filterchain/src/main/java/org/tweetwallfx/filterchain/FilterChainSettings.java[source])
+converted to POJO:: After raw Configuration Data has been loaded
+
 TODO: Add content
 
 === google
@@ -230,6 +251,13 @@ converted to POJO:: After raw Configuration Data has been loaded
 |===
 
 === TODO: stepEngine
+
+TODO: Add content
+
+sectionName:: `devoxxCFP`
+class:: `org.tweetwallfx.cache.CacheSettings` (link:{source-link-base}/cache/src/main/java/org/tweetwallfx/cache/CacheSettings.java[source])
+converted to POJO:: After raw Configuration Data has been loaded
+
 TODO: Add content
 
 === tweetwall
@@ -310,18 +338,53 @@ converted to POJO:: After raw Configuration Data has been loaded
 The values of the four oauth attribute value (`consumerKey`, `consumerSecret`, `accessToken` and `accessTokenSecret`) are values of Twitter Credentials. The Credentials can be retrieved from https://developer.twitter.com/.
 
 === TODO: org.tweetwallfx.google.vision.ImageContentFilterStep$Config
+
+TODO: Add content
+
+sectionName:: `org.tweetwallfx.google.vision.ImageContentFilterStep$Config`
+class:: `org.tweetwallfx.google.vision.ImageContentFilterStep$Config` (link:{source-link-base}/cache/src/main/java/org/tweetwallfx/cache/CacheSettings.java[source])
+converted to POJO:: On instantiation of the FilterStep
+
 TODO: Add content
 
 === TODO: org.tweetwallfx.tweet.api.filter.AcceptFromSenderFilterStep$Config
+
+TODO: Add content
+
+sectionName:: `org.tweetwallfx.tweet.api.filter.AcceptFromSenderFilterStep$Config`
+class:: `org.tweetwallfx.tweet.api.filter.AcceptFromSenderFilterStep$Config` (link:{source-link-base}/cache/src/main/java/org/tweetwallfx/cache/CacheSettings.java[source])
+converted to POJO:: On instantiation of the FilterStep
+
 TODO: Add content
 
 === TODO: org.tweetwallfx.tweet.api.filter.MaxHashtagLengthFilterStep$Config
+
+TODO: Add content
+
+sectionName:: `org.tweetwallfx.tweet.api.filter.MaxHashtagLengthFilterStep$Config`
+class:: `org.tweetwallfx.tweet.api.filter.MaxHashtagLengthFilterStep$Config` (link:{source-link-base}/cache/src/main/java/org/tweetwallfx/cache/CacheSettings.java[source])
+converted to POJO:: On instantiation of the FilterStep
+
 TODO: Add content
 
 === TODO: org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep$Config
+
+TODO: Add content
+
+sectionName:: `org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep$Config`
+class:: `org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep$Config` (link:{source-link-base}/cache/src/main/java/org/tweetwallfx/cache/CacheSettings.java[source])
+converted to POJO:: On instantiation of the FilterStep
+
 TODO: Add content
 
 === TODO: org.tweetwallfx.tweet.api.filter.UserMinimumFollwerCountFilterStep$Config
+
+TODO: Add content
+
+sectionName:: `org.tweetwallfx.tweet.api.filter.UserMinimumFollwerCountFilterStep$Config`
+class:: `org.tweetwallfx.tweet.api.filter.UserMinimumFollwerCountFilterStep$Config` (link:{source-link-base}/cache/src/main/java/org/tweetwallfx/cache/CacheSettings.java[source])
+converted to POJO:: On instantiation of the FilterStep
+
 TODO: Add content
 
 == Example Configuration File
