--- a/README.adoc
+++ b/README.adoc
@@ -369,13 +369,32 @@ TODO: Add content
 
 === TODO: org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep$Config
 
-TODO: Add content
+Settings for the `link:{source-link-base}/tweet-api/src/main/java/org/tweetwallfx/tweet/api/filter/RejectFromSenderFilterStep.java[org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep]` FilterStep concerning the twitter client.
+The FilterStep will reject Tweets based on the User handle of the User sending Tweet if the User handle is in the  `userHandles` Set.
 
 sectionName:: `org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep$Config`
 class:: `org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep$Config` (link:{source-link-base}/tweet-api/src/main/java/org/tweetwallfx/tweet/api/filter/RejectFromSenderFilterStep.java#L98-L156[source])
 converted to POJO:: On instantiation of the FilterStep
 
-TODO: Add content
+.Structure of `tweetwallConfig.json` with this configuration structure only
+[source,plain]
+----
+{
+  "org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep$Config": {
+    "checkRetweeted",
+    "userHandles",
+  }
+}
+----
+
+[options="header", cols="5*"]
+|===
+| Name | Type | Required | Default Value | Description
+
+| org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep$Config | `link:{source-link-base}/tweet-api/src/main/java/org/tweetwallfx/tweet/api/filter/RejectFromSenderFilterStep.java#L98-L156[org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep$Config]` | NO | | Name of Configuration section
+| checkRetweeted | `boolean` | NO | `false` | If `true` indicates that not only the current Tweet is to be evaluated but also the tweet this tweet might have retweeted.
+| userHandles | `java.util.Set<java.lang.String>` | NO | `empty Set` | The Set of Twitter User handles (excluding the `@`) that will have their Tweets rejected.
+|===
 
 === TODO: org.tweetwallfx.tweet.api.filter.UserMinimumFollwerCountFilterStep$Config
 
@@ -462,19 +481,6 @@ TODO: Add content
         "display.",
         "This is a low level attempt at rejecting bots and others from junping on",
         "a trending hashtag."
-    ],
-
-    "org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep$Config": {
-        "checkRetweeted": true,
-        "userHandles": [
-            "turkeytoday"
-        ]
-    },
-    "comment for org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep$Config": [
-        "This block configures the aforementioned filter step in that it declares",
-        "the user handler of twitter user that will have noone of their tweets",
-        "processed by the Tweetwall display.",
-        "@turkeytoday crossposted with the devoxx hashtag last year during Devoxx BE."
     ],
 
     "org.tweetwallfx.tweet.api.filter.UserMinimumFollwerCountFilterStep$Config": {
